--- a/assets/css/scss/app.scss
+++ b/assets/css/scss/app.scss
@@ -1,3 +1,5 @@
+@import './plugins/slick';
+
 @import './components/base';
 @import './includes/header';
 @import './includes/header-menu';
@@ -5,3 +7,4 @@
 
 
 @import './includes/home-banner';
+@import './includes/new-arrival';
