--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,104 @@
+/* Slider */
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+.slick-list:focus {
+  outline: none;
+}
+
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.slick-track:before,
+.slick-track:after {
+  display: table;
+  content: '';
+}
+
+.slick-track:after {
+  clear: both;
+}
+
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+
+.slick-slide {
+  display: none;
+  float: left;
+  height: 100%;
+  min-height: 1px;
+}
+
+[dir='rtl'] .slick-slide {
+  float: right;
+}
+
+.slick-slide img {
+  display: block;
+}
+
+.slick-slide.slick-loading img {
+  display: none;
+}
+
+.slick-slide.dragging img {
+  pointer-events: none;
+}
+
+.slick-initialized .slick-slide {
+  display: block;
+}
+
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+
+.slick-arrow.slick-hidden {
+  display: none;
+}
+
 body {
   background-color: #E5E5E5;
+  overflow-x: hidden;
 }
 
 header {
@@ -29,8 +128,11 @@ header .container nav .search form .custom_select {
   height: 42px;
   background-color: #EDEFEF;
   color: #181F3F;
-  border: 0;
+  border: none;
+  outline: none;
   border-radius: 4px 0 0 4px;
+  padding: 0 28px 0 16px;
+  font-size: 12px;
 }
 
 header .container nav .search form input {
@@ -140,8 +242,58 @@ header .container nav .log_panel ul li a img {
   border: 1px solid #181F3F;
 }
 
+.home-banner .container .content-wrap .left-cat .button-wrap button:hover {
+  color: #fff;
+  background-color: #181F3F;
+}
+
+.home-banner .container .content-wrap .banner-wrap {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.home-banner .container .content-wrap .banner-wrap .banner-content {
+  position: absolute;
+  color: #fff;
+}
+
+.home-banner .container .content-wrap .banner-wrap .banner-content h3 {
+  font-size: 32px;
+  font-weight: 600px;
+}
+
+.home-banner .container .content-wrap .banner-wrap .banner-content h1 {
+  font-size: 42px;
+  font-weight: 300px;
+}
+
 .home-banner .container .content-wrap .banner-wrap img {
   border-radius: 10px;
+  height: 480px;
+  width: 730px;
+  object-fit: cover;
+}
+
+.home-banner .container .content-wrap .banner-wrap .button-wrap {
+  position: absolute;
+  margin-top: 130px;
+}
+
+.home-banner .container .content-wrap .banner-wrap .button-wrap button {
+  background-color: #ec7451;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 600px;
+  padding: 10px 26px 11px;
+}
+
+.home-banner .container .content-wrap .banner-wrap .button-wrap button:hover {
+  border: 1px solid #ec7451;
+  background-color: #fff;
+  color: #ec7451;
 }
 
 .home-banner .container .content-wrap .right-cat {
@@ -176,4 +328,47 @@ header .container nav .log_panel ul li a img {
 .home-banner .container .content-wrap .right-cat .button-wrap button {
   color: #fff;
   background-color: #181F3F;
+}
+
+.home-banner .container .content-wrap .right-cat .button-wrap button:hover {
+  color: #181F3F;
+  border: 1px solid #181F3F;
+  background-color: #fff;
+}
+
+.new-arrivals .container .carousel {
+  background-color: #fff;
+  border-radius: 10px;
+  width: 1140px;
+  padding: 24px 24px 49px 24px;
+}
+
+.new-arrivals .container .carousel .header {
+  display: flex;
+}
+
+.new-arrivals .container .carousel .header .button a {
+  color: #ec7451;
+}
+
+.new-arrivals .container .carousel .carousel-1 {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.new-arrivals .container .carousel .carousel-1 .carousel-cell {
+  margin-right: 24px;
+  padding: 20px 9px 20px 9px;
+  width: 162px;
+  max-width: 30%;
+  border-radius: 4px;
+  background-color: #fff;
+  border: 1px solid #E5E4E9;
+}
+
+.new-arrivals .container .carousel .carousel-1 .carousel-cell .price {
+  color: #181F3F;
+  font-size: 16px;
+  font-weight: 700px;
 }
