--- a/assets/css/scss/includes/_header.scss
+++ b/assets/css/scss/includes/_header.scss
@@ -20,8 +20,11 @@ header{
                         height: 42px;
                         background-color: #EDEFEF;
                         color: #181F3F;
-                        border: 0;
+                        border: none;
+                        outline: none;
                         border-radius: 4px 0 0 4px;
+                        padding: 0 28px 0 16px;
+                        font-size: 12px;
                     }
                     input{
                         width: 320px;
