--- a/assets/css/scss/app.scss
+++ b/assets/css/scss/app.scss
@@ -1,8 +1,17 @@
 @import './plugins/slick';
 
 @import './components/base';
+@import './components/font';
 @import './includes/header';
 @import './includes/header-menu';
+@import './includes/cuisines';
+@import './includes/cat-sec';
+@import './includes/offer-tab';
+@import './includes/test';
+@import './includes/footer';
+
+
+
 
 
 
