--- a/assets/css/scss/includes/_header.scss
+++ b/assets/css/scss/includes/_header.scss
@@ -1,6 +1,7 @@
 header{
     background-color: #181F3F;
     height: 90px;
+    // position: fixed;
     .container{
         nav{
             display: flex;
