--- a/assets/css/scss/includes/_home-banner.scss
+++ b/assets/css/scss/includes/_home-banner.scss
@@ -4,6 +4,7 @@
     .container{
         .content-wrap{
             display: flex;
+            margin-bottom: 30px;
             .left-cat{
                 width: 205px;
                 height: 426px;
@@ -41,46 +42,69 @@
                     }
                 }
             }
-            .banner-wrap{
-                display: flex;
-                flex-flow: column;
-                justify-content: center;
-                align-items: center;
-                text-align: center;
-                .banner-content{
+            .banner-slider{
+                height: 480px;
+                width: 730px;
+                position: relative ;
+                .slick-arrow{
+                    width: 36px;
+                    height: 36px;
                     position: absolute;
-                    color: #fff;
-                    h3{
-                       font-size: 32px;
-                       font-weight: 600px;    
+                    background-color: #fff;
+                    color:#181F3F;
+                    border: none;
+                    border-radius: 4px;
+                    outline: none;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    z-index: 2;
+                    &.slick-prev{
+                        left: 30px;
                     }
-                    h1{
-                        font-size: 42px;
-                        font-weight: 300px;
+                    &.slick-next{
+                        right: 30px;
                     }
                 }
-                img{
-                    border-radius: 10px;
-                    height: 480px;
-                    width: 730px;
-                    object-fit: cover;
-                }
-                .button-wrap{
-                    position: absolute;
-                    margin-top: 130px;
-                   button{
-                    background-color:#ec7451;
-                    color: #fff;
-                    font-size: 16px;
-                    font-weight: 600px;
-                    padding: 10px 26px 11px;
-                    &:hover{
-                        border: 1px solid #ec7451;
-                        background-color: #fff;
-                        color: #ec7451;
+                .banner-wrap{
+                    display: flex;
+                    flex-flow: column;
+                    justify-content: center;
+                    align-items: center;
+                    text-align: center;
+                    .banner-content{
+                        position: absolute;
+                        color: #fff;
+                        h3{
+                           font-size: 32px;
+                           font-weight: 600px;    
+                        }
+                        h1{
+                            font-size: 42px;
+                            font-weight: 300px;
+                        }
                     }
-                   }
-                } 
+                    img{
+                        border-radius: 10px;
+                        object-fit: cover;
+                    }
+                    .button-wrap{
+                        position: absolute;
+                        margin-top: 130px;
+                       button{
+                        background-color:#ec7451;
+                        color: #fff;
+                        font-size: 16px;
+                        font-weight: 600px;
+                        padding: 10px 26px 11px;
+                        &:hover{
+                            border: 1px solid #ec7451;
+                            background-color: #fff;
+                            color: #ec7451;
+                        }
+                       }
+                    } 
+                }
+
             }
             .right-cat{
                 width: 205px;
@@ -107,6 +131,7 @@
                 }
                 .button-wrap{
                     button{
+                        margin-top: 5px;
                         color: #fff;
                         background-color: #181F3F ;
                         &:hover{
